--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,7 +77,7 @@ p{
 .flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
-    height: 100%;
+    /* height: 110%; */
     backface-visibility: hidden;
 }
 
@@ -101,7 +101,7 @@ p{
 
 .text1{
     font-family: 'Mitr', sans-serif;
-    padding : 7rem;
+    padding : 6rem;
     text-align: center ;
     width: 100% ;
     font-size: 3rem ;
@@ -128,9 +128,10 @@ p{
 
 } 
 
+
 #alive {
     font-family: 'Mitr', sans-serif;
-    margin-top : 0px ;
+    margin-top : 1rem ;
     margin-left : 5rem;
     margin-right : 5rem;
     padding : 2rem;
@@ -140,11 +141,7 @@ p{
 #whatistedx p{
     font-family: 'Mitr', sans-serif;
     margin : 3rem;
-    /* margin-left : 7rem ;
-    margin-right : 7rem ;
-    padding : 2rem;
-    background-color: red;
-    border-radius : 2rem; */
+    padding-top : 2rem;
     color: white;
     font-size: 20px;
 } 
@@ -152,11 +149,71 @@ p{
 #TEDxKU p{
     font-family: 'Mitr', sans-serif;
      margin : 6rem;
-    /*margin-left : 7rem ;
-    margin-right : 7rem ;
-    padding : 2rem;
-    background-color: red;
-    border-radius : 2rem; */
     color: white;
     font-size: 20px;
 }  
+
+@media only screen and (max-width: 900px) {
+        
+    .text1{
+        font-family: 'Mitr', sans-serif;
+        padding-top : 8rem;
+        padding-bottom : 3rem;
+        padding-left : 1rem;
+        padding-right : 1rem;
+        text-align: center ;
+        width: 100% ;
+        font-size: 2rem ;
+        font-weight: 500 ;
+        font-weight: 100 ;
+        letter-spacing: 2px ;
+        margin-bottom: 0px ;
+    } 
+
+    .text2 {
+        font-family: 'Mitr', sans-serif;
+        padding: 1rem;
+        text-align: center ;
+        width: 100% ;
+        font-size: 2rem ;
+        font-weight: 500 ;
+        font-weight: 100 ;
+        letter-spacing: 2px ;
+        margin-bottom: 0px ;
+        padding: 0px ;
+        padding-bottom : 0px;
+        
+
+    } 
+
+    #alive {
+        font-family: 'Mitr', sans-serif;
+        margin-top : 0px ;
+        margin-left : 1rem;
+        margin-right : 1rem;
+        padding : 2rem;
+        font-size: 14px;
+
+    }
+    #whatistedx p{
+        font-family: 'Mitr', sans-serif;
+        padding-top : 0rem;
+        margin : 3rem;
+        color: white;
+        font-size: 14px;
+    } 
+
+    #TEDxKU p{
+        font-family: 'Mitr', sans-serif;
+        margin : 6rem;
+        color: white;
+        font-size: 14px;
+    }  
+
+        /* Position the front and back side */
+    .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        backface-visibility: hidden;
+}
+  }
